--- a/LabBack/config/application-dev.properties
+++ b/LabBack/config/application-dev.properties
@@ -4,28 +4,16 @@ server.servlet.context-path=/lab
 
 #myBatis
 mybatis.mapper-locations=classpath:/mapper/*.xml
-mybatis.type-aliases-package=com.lab.shop.domain
+mybatis.type-aliases-package=com.lab.lab.domain
 
-#oauth2
-spring.security.oauth2.client.registration.google.client-id=355253578282-6s2oiednftl7aboet3f0gtt0299i1n62.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
 
 #Redis
-# Redis数据库索引（默认为0）
 spring.redis.database=0  
-# Redis服务器地址
 spring.redis.host=127.0.0.1
-# Redis服务器连接端口
 spring.redis.port=6379  
-# Redis服务器连接密码（默认为空）
 spring.redis.password=
-# 链接超时时间 单位 ms（毫秒）
 spring.redis.timeout=3000
-# 连接池最大连接数（使用负值表示没有限制） 默认 8
 spring.redis.lettuce.pool.max-active=8
-# 连接池最大阻塞等待时间（使用负值表示没有限制） 默认 -1
 spring.redis.lettuce.pool.max-wait=-1
-# 连接池中的最大空闲连接 默认 8
 spring.redis.lettuce.pool.max-idle=8
-# 连接池中的最小空闲连接 默认 0
 spring.redis.lettuce.pool.min-idle=0
