--- a/LabBack/config/application-dev.properties
+++ b/LabBack/config/application-dev.properties
@@ -1,6 +1,6 @@
 #server
 server.port=8087
-server.servlet.context-path=/lab
+server.servlet.context-path=/lab/api
 
 #myBatis
 mybatis.mapper-locations=classpath:/mapper/*.xml
